# coffee-first-crack-detection

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-pi.txt  requirements.txt
.claude/skills/evaluate-model/: SKILL.md
.claude/skills/export-onnx/: SKILL.md
.claude/skills/push-to-hub/: SKILL.md
.claude/skills/record-roast/: SKILL.md
.claude/skills/sync-hub-cards/: SKILL.md
.claude/skills/train-model/: SKILL.md
.github/instructions/: copilot.instructions.md
configs/: default.yaml
data/: DATASET_CARD.md
data/labels/: 25-10-19_1103-costarica-hermosa-5.alog.json  25-10-19_1136-brazil-1.alog.json  25-10-19_1204-brazil-2.alog.json  25-10-19_1236-brazil-3.alog.json  25-10-19_1315-brazil4.alog.json  mic1-panama-hortigal-estate-roast1.json  mic1-panama-hortigal-estate-roast2.json  mic1-panama-hortigal-estate-roast3.json  mic2-brazil-roast1-21-02-26-10-37-amplified.json  mic2-brazil-roast1-21-02-26-10-37.json  mic2-brazil-roast2-21-02-26-11-15-amplified.json  mic2-brazil-roast2-21-02-26-11-15.json  mic2-brazil-roast3-21-02-26-12-02-amplified.json  mic2-brazil-roast3-21-02-26-12-02.json  mic2-brazil-roast4-21-02-26-12-24-amplified.json  mic2-brazil-roast4-21-02-26-12-24.json  mic2-brazil-santos-roast1-04-04-26-17-52-amplified.json  mic2-brazil-santos-roast1-04-04-26-17-52.json  mic2-brazil-santos-roast2-04-04-26-18-39-amplified.json  mic2-brazil-santos-roast2-04-04-26-18-39.json  mic2-panama-hortigal-estate-roast1.json  mic2-panama-hortigal-estate-roast2.json  mic2-panama-hortigal-estate-roast3.json  project-1-at-2026-04-04-19-55-1da16407.json  project-1-at-2026-04-12-19-41-e5863e6e.json  roast-1-costarica-hermosa-hp-a.json  roast-2-costarica-hermosa-hp-a.json  roast-3-costarica-hermosa-hp-a.json  roast-4-costarica-hermosa-hp-a.json
docs/: data_preparation.md  hyperparameter_tuning.md  multi_mic_setup.md  notes.md
docs/posts/: plan.md
docs/posts/devto/: post-1-architecture.md  post-2-data.md  post-3-science.md  (+2 more)
docs/state/: registry.md
notebooks/: quickstart.ipynb
results/: README.md  mac_fp32_eval.json  mac_int8_eval.json  pi5_fp32_eval.json  pi5_int8_2t_optimised.json  pi5_int8_2threads_eval.json  pi5_int8_4t_optimised.json  pi5_int8_4threads_eval.json  pi5_int8_eval.json  pi5_threshold_sweep.json  simulation.json  threshold_sweep.json  v2_mac_int8_eval.json  v2_pi5_int8_4t_eval.json
scripts/: __init__.py  benchmark_onnx_pi.py  benchmark_platforms.py  evaluate_onnx.py  propagate_annotations.py  push_to_hub.py  rebuild_and_train.sh  record_mics.py  simulate_detection.py  sync_hub_cards.py
spaces/: README.md  app.py  requirements.txt
src/coffee_first_crack/: __init__.py  dataset.py  evaluate.py  export_onnx.py  inference.py  inference_onnx.py  model.py  train.py
tests/: test_data_prep.py  test_dataset.py  test_inference.py  test_inference_onnx.py  test_model.py  test_propagate_annotations.py  test_record_mics.py
(+8 files in other folders)
