[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-first-crack-detection"
version = "0.1.0"
description = "Audio model to detect coffee first crack — training, evaluation, and HuggingFace publishing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sertan Yamaner", email = "sertan@syamaner.com" },
]
keywords = ["coffee", "audio", "machine-learning", "first-crack", "AST"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "torchaudio>=2.1.0",
    "transformers>=4.37.0",
    "datasets>=2.16.0",
    "evaluate>=0.4.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
train = [
    "tensorboard>=2.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
]
export = [
    "optimum[onnxruntime]>=1.16.0",
    "onnx>=1.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
]
inference = [
    "sounddevice>=0.4.6",
]
all = [
    "coffee-first-crack-detection[train,export,dev,inference]",
]

[project.urls]
Homepage = "https://github.com/syamaner/coffee-first-crack-detection"
Repository = "https://github.com/syamaner/coffee-first-crack-detection"
"HuggingFace Model" = "https://huggingface.co/syamaner/coffee-first-crack-detection"
"HuggingFace Dataset" = "https://huggingface.co/datasets/syamaner/coffee-first-crack-audio"

[project.scripts]
train-first-crack = "coffee_first_crack.train:main"
evaluate-first-crack = "coffee_first_crack.evaluate:main"
infer-first-crack = "coffee_first_crack.inference:main"
export-onnx-first-crack = "coffee_first_crack.export_onnx:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "data", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=coffee_first_crack --cov-report=term-missing -m 'not slow'"
markers = [
    "slow: marks tests that load large models from HuggingFace Hub (run with -m slow)",
]
